.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Sharing_audit__c.object
<CustomObject>
    <description>XCDHRMS - To store the sharing log and correct it</description>
    <fields>
        <fullName>xcdhcm__Employee_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipName>Sharing_audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Get the managers of employee</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sharing_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Record__c</fullName>
        <label>Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sharing Audit</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sharing audit no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharing Audit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>